--- a/app/src/main/res/layout/activity_team_details.xml
+++ b/app/src/main/res/layout/activity_team_details.xml
@@ -79,7 +79,7 @@
                 android:background="@drawable/country_image"
                 app:layout_constraintStart_toEndOf="@id/team_logo_layout"
                 app:layout_constraintTop_toBottomOf="@id/team_name"
-                tools:ignore="ContentDescription"
+                tools:ignore="ContentDescription,ImageContrastCheck"
                 tools:src="@drawable/ic_launcher_background" />
 
             <TextView
@@ -106,7 +106,8 @@
             app:tabIconTint="@color/surface_surface_1"
             app:tabSelectedTextColor="@color/surface_surface_1"
             app:tabTextAppearance="@style/Body"
-            app:tabTextColor="@color/surface_surface_1" />
+            app:tabTextColor="@color/surface_surface_1"
+            tools:ignore="SpeakableTextPresentCheck" />
     </com.google.android.material.appbar.AppBarLayout>
 
 
