--- a/app/src/main/res/drawable/ic_icon_back.xml
+++ b/app/src/main/res/drawable/ic_icon_back.xml
@@ -8,6 +8,6 @@
         android:pathData="M0,0h24v24H0z"/>
     <path
         android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"
-        android:fillColor="#121212"/>
+        android:fillColor="@color/on_surface_on_surface_lv_1"/>
   </group>
 </vector>
