--- a/app/src/main/res/layout/activity_tournament_details.xml
+++ b/app/src/main/res/layout/activity_tournament_details.xml
@@ -65,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="52dp"
-                android:textColor="#ffffff"
+                android:textColor="@color/on_color_on_color_primary"
                 app:layout_constraintStart_toEndOf="@id/tournament_logo_layout"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="NBA" />
@@ -79,7 +79,7 @@
                 android:background="@drawable/country_image"
                 app:layout_constraintStart_toEndOf="@id/tournament_logo_layout"
                 app:layout_constraintTop_toBottomOf="@id/tournament_name"
-                tools:ignore="ContentDescription"
+                tools:ignore="ContentDescription,ImageContrastCheck"
                 tools:src="@drawable/ic_launcher_background" />
 
             <TextView
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
-                android:textColor="#ffffff"
+                android:textColor="@color/on_color_on_color_primary"
                 app:layout_constraintStart_toEndOf="@id/country_logo"
                 app:layout_constraintTop_toBottomOf="@id/tournament_name"
                 tools:text="USA" />
@@ -105,7 +105,8 @@
             app:tabIconTint="@color/surface_surface_1"
             app:tabSelectedTextColor="@color/surface_surface_1"
             app:tabTextAppearance="@style/Body"
-            app:tabTextColor="@color/surface_surface_1" />
+            app:tabTextColor="@color/surface_surface_1"
+            tools:ignore="SpeakableTextPresentCheck" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager2.widget.ViewPager2
