--- a/app/src/main/res/layout/american_football_standing_item.xml
+++ b/app/src/main/res/layout/american_football_standing_item.xml
@@ -25,7 +25,7 @@
             android:layout_margin="4dp"
             android:gravity="center"
             android:minWidth="16dp"
-            android:textColor="#121212"
+            android:textColor="@color/on_surface_on_surface_lv_1"
             tools:text="1" />
 
     </LinearLayout>
@@ -38,7 +38,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:minWidth="128dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintStart_toEndOf="@id/position_layout"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Kansas City Chiefs" />
@@ -53,7 +53,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:minWidth="24dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintEnd_toStartOf="@id/team_matches_won"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="15" />
@@ -67,7 +67,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:minWidth="24dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintEnd_toStartOf="@id/team_matches_drew"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="12" />
@@ -81,7 +81,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:minWidth="24dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintEnd_toStartOf="@id/team_matches_lost"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="2" />
@@ -95,7 +95,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:minWidth="24dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintEnd_toStartOf="@id/team_percentage"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="1" />
@@ -110,7 +110,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:minWidth="40dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="0.813" />
