--- a/app/src/main/res/layout/basketball_score_item.xml
+++ b/app/src/main/res/layout/basketball_score_item.xml
@@ -42,7 +42,7 @@
         android:gravity="end"
         android:minWidth="32dp"
         android:minHeight="16dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/incident_icon"
         app:layout_constraintTop_toTopOf="parent"
@@ -58,7 +58,7 @@
         android:layout_marginBottom="12dp"
         android:gravity="start"
         android:minWidth="32dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/dash"
         app:layout_constraintTop_toTopOf="parent"
@@ -75,7 +75,7 @@
         android:layout_marginBottom="12dp"
         android:gravity="center"
         android:text="@string/dash"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/home_team_score"
         app:layout_constraintTop_toTopOf="parent"
