--- a/app/src/main/res/layout/basketball_standing_item.xml
+++ b/app/src/main/res/layout/basketball_standing_item.xml
@@ -25,7 +25,7 @@
             android:layout_margin="4dp"
             android:gravity="center"
             android:minWidth="16dp"
-            android:textColor="#121212"
+            android:textColor="@color/on_surface_on_surface_lv_1"
             tools:text="1" />
 
     </LinearLayout>
@@ -38,7 +38,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:minWidth="80dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintStart_toEndOf="@id/position_layout"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Boston" />
@@ -53,7 +53,7 @@
         android:layout_marginEnd="4dp"
         android:gravity="center"
         android:minWidth="24dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintEnd_toStartOf="@id/team_matches_won"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="37" />
@@ -67,7 +67,7 @@
         android:layout_marginEnd="4dp"
         android:gravity="center"
         android:minWidth="24dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintEnd_toStartOf="@id/team_matches_lost"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="24" />
@@ -81,7 +81,7 @@
         android:layout_marginEnd="4dp"
         android:gravity="center"
         android:minWidth="24dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintEnd_toStartOf="@id/team_diff"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="22" />
@@ -96,7 +96,7 @@
         android:layout_marginEnd="4dp"
         android:gravity="center"
         android:minWidth="32dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintEnd_toStartOf="@id/team_str"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="-255" />
@@ -111,7 +111,7 @@
         android:gravity="center"
         android:minWidth="24dp"
         android:text="@string/str_mock"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintEnd_toStartOf="@id/team_gb"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -126,7 +126,7 @@
         android:gravity="center"
         android:minWidth="32dp"
         android:text="@string/gb_mock"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintEnd_toStartOf="@id/team_percentage"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -141,7 +141,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:minWidth="40dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="0.684" />
