--- a/app/src/main/res/layout/foul_item.xml
+++ b/app/src/main/res/layout/foul_item.xml
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="12dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintStart_toEndOf="@id/incident_icon"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Cristiano Ronaldo" />
