--- a/app/src/main/res/layout/score_item.xml
+++ b/app/src/main/res/layout/score_item.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="20dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintStart_toEndOf="@id/away_team_score"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Cristiano Ronaldo" />
@@ -53,7 +53,7 @@
         android:layout_marginTop="14dp"
         android:gravity="end"
         android:minWidth="32dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintStart_toEndOf="@id/incident_icon"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="1" />
@@ -67,7 +67,7 @@
         android:layout_marginTop="14dp"
         android:gravity="start"
         android:minWidth="32dp"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintStart_toEndOf="@id/dash"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="1" />
@@ -81,7 +81,7 @@
         android:layout_marginTop="14dp"
         android:gravity="center"
         android:text="@string/dash"
-        android:textColor="#121212"
+        android:textColor="@color/on_surface_on_surface_lv_1"
         app:layout_constraintStart_toEndOf="@id/home_team_score"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="-" />
