--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,6 @@
     android:orientation="vertical"
     tools:context=".LoginActivity">
 
-
     <ImageView
         android:layout_width="200dp"
         android:layout_height="40dp"
@@ -31,7 +30,8 @@
             android:layout_height="match_parent"
             android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
-            android:minWidth="200dp" />
+            android:minWidth="200dp"
+            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
