--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,11 +7,29 @@
     android:orientation="vertical"
     tools:context=".SignUpActivity">
 
+
+    <LinearLayout
+        android:id="@+id/back_button_layout"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/back_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_arrow_back"
+            tools:ignore="ContentDescription" />
+    </LinearLayout>
+
     <ImageView
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:src="@drawable/ic_sofascore_logo"
         tools:ignore="ContentDescription" />
 
@@ -30,7 +48,8 @@
             android:layout_height="match_parent"
             android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
-            android:minWidth="200dp" />
+            android:minWidth="200dp"
+            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -40,11 +59,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="40dp"
-        app:helperText="@string/required"
-        app:passwordToggleEnabled="true"
         app:counterEnabled="true"
         app:counterMaxLength="16"
-        app:helperTextTextColor="@color/status_error">
+        app:helperText="@string/required"
+        app:helperTextTextColor="@color/status_error"
+        app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/user_password"
@@ -63,9 +82,9 @@
         android:layout_marginTop="40dp"
         app:counterEnabled="true"
         app:counterMaxLength="16"
-        app:passwordToggleEnabled="true"
         app:helperText="@string/required"
-        app:helperTextTextColor="@color/status_error">
+        app:helperTextTextColor="@color/status_error"
+        app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/user_confirm_password"
@@ -74,7 +93,8 @@
             android:hint="@string/confirm_password"
             android:inputType="textEmailAddress"
             android:maxLength="16"
-            android:minWidth="200dp" />
+            android:minWidth="200dp"
+            tools:ignore="TextContrastCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -87,8 +107,6 @@
         android:background="@drawable/button_toggle"
         android:text="@string/sign_up"
         android:textColor="@color/on_surface_on_surface_lv_1" />
-
-
 
 
 </LinearLayout>
